--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -17,6 +17,7 @@
         "TITLE": "Sign Up"
     },
     "BUTTON": {
+        "STOP": "STOP",
         "CANCEL": "CANCEL",
         "OK": "OK",
         "DELETE": "DELETE",
@@ -330,6 +331,18 @@
         "OF": "of"
     },
     "REPLICATION": {
+        "STOP_TITLE": "Confirm Stop Executions",
+        "STOP_SUMMARY": "Do you want to stop the executions {{param}}?",
+        "TASK_ID":"Task ID",
+        "RECOURCE_TYPE": "Recource Type",
+        "RECOURCE": "Recource",
+        "DESTINATION": "Destination",
+        "POLICY": "Policy",
+        "DURATION": "Duration",
+        "SUCCESS_RATE": "Success Rate",
+        "SUCCESS": "Success",
+        "FAILTURE": "Failture",
+        "IN_PROGRESS": "In Progress",
         "REPLICATION_RULE": "Replication Rule",
         "NEW_REPLICATION_RULE": "New Replication Rule",
         "ENDPOINTS": "Endpoints",
@@ -353,13 +366,16 @@
         "TESTING_CONNECTION": "Testing Connection...",
         "TEST_CONNECTION_SUCCESS": "Connection tested successfully.",
         "TEST_CONNECTION_FAILURE": "Failed to ping endpoint.",
+        "ID":"ID",
         "NAME": "Name",
-        "PROJECT": "Project",
         "NAME_IS_REQUIRED": "Name is required.",
         "DESCRIPTION": "Description",
         "ENABLE": "Enable",
         "DISABLE": "Disable",
-        "DESTINATION_NAME": "Endpoint Name",
+        "REPLICATION_MODE": "Replication Mode",
+        "SRC_NAMESPACE": "Source registry:Namespace",
+        "DESTINATION_NAMESPACE": "Destination registry:Namespace",
+        "LAST_REPLICATION":"Last Replication",
         "DESTINATION_NAME_IS_REQUIRED": "Endpoint name is required.",
         "NEW_DESTINATION": "New Endpoint",
         "DESTINATION_URL": "Endpoint URL",
@@ -371,8 +387,9 @@
         "DISABLED": "Disabled",
         "LAST_START_TIME": "Last Start Time",
         "ACTIVATION": "Activation",
-        "REPLICATION_JOBS": "Replication Jobs",
-        "STOPJOB": "Stop Jobs",
+        "REPLICATION_EXECUTION": "Execution",
+        "REPLICATION_EXECUTIONS": "Executions",
+        "STOPJOB": "Stop",
         "ALL": "All",
         "PENDING": "Pending",
         "RUNNING": "Running",
@@ -384,9 +401,10 @@
         "SIMPLE": "Simple",
         "ADVANCED": "Advanced",
         "STATUS": "Status",
-        "OPERATION": "Operation",
+        "REPLICATION_TRIGGER": "Trigger",
         "CREATION_TIME": "Start Time",
         "UPDATE_TIME": "Update Time",
+        "END_TIME": "End Time",
         "LOGS": "Logs",
         "OF": "of",
         "ITEMS": "items",
@@ -840,6 +858,7 @@
         "ALL": "All",
         "RUNNING": "Running",
         "FAILED": "Failed",
+        "STOP_EXECUTIONS": "Stop Execution",
         "DELETE_PROJECT": "Delete project",
         "DELETE_REPO": "Delete repository",
         "DELETE_TAG": "Delete tag",
