--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -17,6 +17,7 @@
         "TITLE": "Registrarse"
     },
     "BUTTON": {
+        "STOP": "STOP",
         "CANCEL": "CANCELAR",
         "OK": "OK",
         "DELETE": "ELIMINAR",
@@ -329,6 +330,20 @@
         "OF": "of"
     },
     "REPLICATION": {
+        "STOP_TITLE": "Confirme Stop Executions",
+        "STOP_SUMMARY": "De que desea detener las ejecuciones {{param}}?",
+        "TASK_ID":"Task ID",
+        "RECOURCE_TYPE": "Recource Type",
+        "RECOURCE": "Recource",
+        "DESTINATION": "Destination",
+        "POLICY": "Policy",
+        "DURATION": "Duration",
+        "SUCCESS_RATE": "Success Rate",
+        "SUCCESS": "Success",
+        "FAILTURE": "Failture",
+        "IN_PROGRESS": "In Progress",
+        "STOP_EXECUTIONS": "Stop Execution",
+        "ID":"ID",
         "REPLICATION_RULE": "Reglas de Replicación",
         "NEW_REPLICATION_RULE": "Nueva Regla de Replicación",
         "ENDPOINTS": "Endpoints",
@@ -358,7 +373,10 @@
         "DESCRIPTION": "Descripción",
         "ENABLE": "Activar",
         "DISABLE": "Desactivar",
-        "DESTINATION_NAME": "Nombre del Endpoint",
+        "REPLICATION_MODE": "Replication Mode",
+        "SRC_NAMESPACE": "Source registry:Namespace",
+        "DESTINATION_NAMESPACE": "Destination registry:Namespace",
+        "LAST_REPLICATION":"Last Replication",
         "DESTINATION_NAME_IS_REQUIRED": "El nombre del endpoint es obligatorio.",
         "NEW_DESTINATION": "Nuevo Endpoint",
         "DESTINATION_URL": "URL del Endpoint",
@@ -370,8 +388,10 @@
         "DISABLED": "Desactivado",
         "LAST_START_TIME": "Última Fecha de Inicio",
         "ACTIVATION": "Activación",
-        "REPLICATION_JOBS": "Trabajos de Replicación",
-        "STOPJOB": "Stop Jobs",
+        "REPLICATION_EXECUTION": "Trabajo de Replicación",
+        "REPLICATION_EXECUTIONS": "Trabajos de Replicación",
+        "END_TIME": "End Time",
+        "STOPJOB": "Stop",
         "ALL": "Todos",
         "PENDING": "Pendiente",
         "RUNNING": "Ejecutando",
