--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -17,6 +17,7 @@
         "TITLE": "Registrar-se"
     },
     "BUTTON": {
+        "STOP": "STOP",
         "CANCEL": "CANCELAR",
         "OK": "OK",
         "DELETE": "DELETAR",
@@ -328,6 +329,20 @@
         "OF": "de"
     },
     "REPLICATION": {
+        "STOP_TITLE": "Confirme as execuções de parada",
+        "STOP_SUMMARY": "Você quer parar as execuções? {{param}}?",
+        "TASK_ID":"Task ID",
+        "RECOURCE_TYPE": "Recource Type",
+        "RECOURCE": "Recource",
+        "DESTINATION": "Destination",
+        "POLICY": "Policy",
+        "DURATION": "Duration",
+        "SUCCESS_RATE": "Success Rate",
+        "SUCCESS": "Success",
+        "FAILTURE": "Failture",
+        "IN_PROGRESS": "In Progress",
+        "STOP_EXECUTIONS": "Stop Execution",
+        "ID":"ID",
         "REPLICATION_RULE": "Regra de replicação",
         "NEW_REPLICATION_RULE": "Nova regra de replicação",
         "ENDPOINTS": "Endpoints",
@@ -357,7 +372,10 @@
         "DESCRIPTION": "Descrição",
         "ENABLE": "Habilitar",
         "DISABLE": "Desabilitar",
-        "DESTINATION_NAME": "Nome do Endpoint",
+        "REPLICATION_MODE": "Replication Mode",
+        "SRC_NAMESPACE": "Source registry:Namespace",
+        "DESTINATION_NAMESPACE": "Destination registry:Namespace",
+        "LAST_REPLICATION":"Last Replication",
         "DESTINATION_NAME_IS_REQUIRED": "Nome do Endpoint é obrigatório.",
         "NEW_DESTINATION": "Novo Endpoint",
         "DESTINATION_URL": "URL do Endpoint",
@@ -369,8 +387,10 @@
         "DISABLED": "Desabilitado",
         "LAST_START_TIME": "Ultima hora de início",
         "ACTIVATION": "Ativação",
-        "REPLICATION_JOBS": "Tarefas de Replicação",
-        "STOPJOB": "Parar tarefas",
+        "REPLICATION_EXECUTION": "ExecTarefa de Replicaçãoution",
+        "REPLICATION_EXECUTIONS": "Tarefas de Replicação",
+        "STOPJOB": "Parar",
+        "END_TIME": "End Time",
         "ALL": "Todas",
         "PENDING": "Pendentes",
         "RUNNING": "Executando",
