--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -447,7 +447,12 @@
         "NAME_TOOLTIP": "nome da regra de replicação deve conter ao menos 2 caracteres sendo caracteres minusculos, números e  ._- e devem iniciar com letras e números.",
         "DELETED_LABEL_INFO": "Removidas as label(s) '{{param}}' referenciadas no filtro, clique 'SALVAR' para atualizar o filtro e habilitar essa regra.",
         "ACKNOWLEDGE": "Reconhecer",
-        "RULE_DISABLED": "Essa regra foi desabilitada pois uma label usada no seu filtro foi removida. \n Edite a regra e atualize seu filtro para habilitá-la."
+        "RULE_DISABLED": "Essa regra foi desabilitada pois uma label usada no seu filtro foi removida. \n Edite a regra e atualize seu filtro para habilitá-la.",
+        "REPLI_MODE": "Replication mode",
+        "SOURCE_REGISTRY":"Source registry",
+        "SOURCE_NAMESPACES":"Source namespaces",
+        "DEST_REGISTRY":"Destination registry",
+        "DEST_NAMESPACE":"Destination namespace"
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "Novo Endpoint",
