--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -452,7 +452,8 @@
         "SOURCE_REGISTRY":"Source registry",
         "SOURCE_NAMESPACES":"Source namespaces",
         "DEST_REGISTRY":"Destination registry",
-        "DEST_NAMESPACE":"Destination namespace"
+        "DEST_NAMESPACE":"Destination namespace",
+        "NAMESPACE_TOOLTIP": "Namespace name should be at least 2 characters long with lower case characters, numbers and ._- and must be start with characters or numbers."
     },
     "DESTINATION": {
         "NEW_ENDPOINT": "Novo Endpoint",
