Refactor replication-task page
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -331,7 +331,10 @@
         "OF": "of"
     },
     "REPLICATION": {
+        "CURRENT": "current",
+        "FILTER_PLACEHOLDER": "Filter Tasks",
         "STOP_TITLE": "Confirm Stop Executions",
+        "STOP_SUCCESS": "Stop Execution {{param}} Successful",
         "STOP_SUMMARY": "Do you want to stop the executions {{param}}?",
         "TASK_ID":"Task ID",
         "RECOURCE_TYPE": "Recource Type",
@@ -340,14 +343,14 @@
         "POLICY": "Policy",
         "DURATION": "Duration",
         "SUCCESS_RATE": "Success Rate",
-        "SUCCESS": "Success",
-        "FAILTURE": "Failture",
-        "IN_PROGRESS": "In Progress",
+        "SUCCESS": "SUCCESS",
+        "FAILTURE": "FAILTURE",
+        "IN_PROGRESS": "IN PROGRESS",
         "REPLICATION_RULE": "Replication Rule",
         "NEW_REPLICATION_RULE": "New Replication Rule",
         "ENDPOINTS": "Endpoints",
         "FILTER_POLICIES_PLACEHOLDER": "Filter Rules",
-        "FILTER_JOBS_PLACEHOLDER": "Filter Jobs",
+        "FILTER_EXECUTIONS_PLACEHOLDER": "Filter Executions",
         "DELETION_TITLE": "Confirm Rules Deletion",
         "DELETION_SUMMARY": "Do you want to delete rules {{param}}?",
         "REPLICATION_TITLE": "Confirm Rules replication",
