--- a/src/portal/src/i18n/lang/es-es-lang.json
+++ b/src/portal/src/i18n/lang/es-es-lang.json
@@ -330,7 +330,10 @@
         "OF": "of"
     },
     "REPLICATION": {
+        "CURRENT": "current",
+        "FILTER_PLACEHOLDER": "Filter Tasks",
         "STOP_TITLE": "Confirme Stop Executions",
+        "STOP_SUCCESS": "Stop Execution {{param}} Successful",
         "STOP_SUMMARY": "De que desea detener las ejecuciones {{param}}?",
         "TASK_ID":"Task ID",
         "RECOURCE_TYPE": "Recource Type",
@@ -339,16 +342,16 @@
         "POLICY": "Policy",
         "DURATION": "Duration",
         "SUCCESS_RATE": "Success Rate",
-        "SUCCESS": "Success",
-        "FAILTURE": "Failture",
-        "IN_PROGRESS": "In Progress",
+        "SUCCESS": "SUCCESS",
+        "FAILTURE": "FAILTURE",
+        "IN_PROGRESS": "IN PROGRESS",
         "STOP_EXECUTIONS": "Stop Execution",
         "ID":"ID",
         "REPLICATION_RULE": "Reglas de Replicación",
         "NEW_REPLICATION_RULE": "Nueva Regla de Replicación",
         "ENDPOINTS": "Endpoints",
         "FILTER_POLICIES_PLACEHOLDER": "Filtrar Reglas",
-        "FILTER_JOBS_PLACEHOLDER": "Filtrar Trabajos",
+        "FILTER_EXECUTIONS_PLACEHOLDER": "Filter Ejecuciones",
         "DELETION_TITLE": "Confirmar Eliminación de Regla",
         "DELETION_SUMMARY": "¿Quiere eliminar la regla {{param}}?",
         "DELETION_TITLE_FAILURE": "failed to delete Rule Deletion",
