--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -315,7 +315,10 @@
         "OF": "de"
     },
     "REPLICATION": {
+        "CURRENT": "current",
+        "FILTER_PLACEHOLDER": "Filter Tasks",
         "STOP_TITLE": "Confirmer arrêter les exécutions",
+        "STOP_SUCCESS": "Stop Execution {{param}} Successful",
         "STOP_SUMMARY": "Voulez-vous arrêter les exécutions {{param}}?",
         "TASK_ID":"Task ID",
         "RECOURCE_TYPE": "Recource Type",
@@ -324,16 +327,16 @@
         "POLICY": "Policy",
         "DURATION": "Duration",
         "SUCCESS_RATE": "Success Rate",
-        "SUCCESS": "Success",
-        "FAILTURE": "Failture",
-        "IN_PROGRESS": "In Progress",
+        "SUCCESS": "SUCCESS",
+        "FAILTURE": "FAILTURE",
+        "IN_PROGRESS": "IN PROGRESS",
         "STOP_EXECUTIONS": "Stop Execution",
         "ID":"ID",
         "REPLICATION_RULE": "Règle de Réplication",
         "NEW_REPLICATION_RULE": "Nouvelle Règle de Réplication",
         "ENDPOINTS": "Points finaux",
         "FILTER_POLICIES_PLACEHOLDER": "Filtrer les Règles",
-        "FILTER_JOBS_PLACEHOLDER": "Filtrer les Travaux",
+        "FILTER_EXECUTIONS_PLACEHOLDER": "Filter Exécutions",
         "DELETION_TITLE": "Confirmer la suppression de la Règle",
         "DELETION_SUMMARY": "Voulez-vous supprimer la règle {{param}} ?",
         "DELETION_TITLE_FAILURE": "n'a pas supprimé la règle",
