--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -329,7 +329,10 @@
         "OF": "de"
     },
     "REPLICATION": {
+        "CURRENT": "current",
+        "FILTER_PLACEHOLDER": "Filter Tasks",
         "STOP_TITLE": "Confirme as execuções de parada",
+        "STOP_SUCCESS": "Stop Execution {{param}} Successful",
         "STOP_SUMMARY": "Você quer parar as execuções? {{param}}?",
         "TASK_ID":"Task ID",
         "RECOURCE_TYPE": "Recource Type",
@@ -338,16 +341,16 @@
         "POLICY": "Policy",
         "DURATION": "Duration",
         "SUCCESS_RATE": "Success Rate",
-        "SUCCESS": "Success",
-        "FAILTURE": "Failture",
-        "IN_PROGRESS": "In Progress",
+        "SUCCESS": "SUCCESS",
+        "FAILTURE": "FAILTURE",
+        "IN_PROGRESS": "IN PROGRESS",
         "STOP_EXECUTIONS": "Stop Execution",
         "ID":"ID",
         "REPLICATION_RULE": "Regra de replicação",
         "NEW_REPLICATION_RULE": "Nova regra de replicação",
         "ENDPOINTS": "Endpoints",
         "FILTER_POLICIES_PLACEHOLDER": "Filtrar regras",
-        "FILTER_JOBS_PLACEHOLDER": "Filtrar tarefas",
+        "FILTER_EXECUTIONS_PLACEHOLDER": "Execuções de Filtro",
         "DELETION_TITLE": "Confirmar remoção de regras",
         "DELETION_SUMMARY": "Você quer remover a regra {{param}}?",
         "REPLICATION_TITLE": "Confirmar regras de replicação",
