Fix cannot search for replication tasks
Signed-off-by: FangyuanCheng <fangyuanc@vmware.com>

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -337,14 +337,14 @@
         "STOP_SUCCESS": "Stop Execution {{param}} Successful",
         "STOP_SUMMARY": "Do you want to stop the executions {{param}}?",
         "TASK_ID":"Task ID",
-        "RECOURCE_TYPE": "Recource Type",
-        "RECOURCE": "Recource",
+        "RESOURCE_TYPE": "Resource Type",
+        "SOURCE": "Source",
         "DESTINATION": "Destination",
         "POLICY": "Policy",
         "DURATION": "Duration",
         "SUCCESS_RATE": "Success Rate",
         "SUCCESS": "SUCCESS",
-        "FAILTURE": "FAILTURE",
+        "FAILURE": "FAILURE",
         "IN_PROGRESS": "IN PROGRESS",
         "REPLICATION_RULE": "Replication Rule",
         "NEW_REPLICATION_RULE": "New Replication Rule",
