--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -336,14 +336,14 @@
         "STOP_SUCCESS": "停止任务 {{param}} 成功",
         "STOP_SUMMARY": "确认停止任务{{param}}?",
         "TASK_ID":"任务ID",
-        "RECOURCE_TYPE": "源类型",
-        "RECOURCE": "源",
+        "RESOURCE_TYPE": "源类型",
+        "SOURCE": "源",
         "DESTINATION": "目标",
         "POLICY": "政策",
         "DURATION": "到期时间",
         "SUCCESS_RATE": "成功百分比",
         "SUCCESS": "成功",
-        "FAILTURE": "失败",
+        "FAILURE": "失败",
         "IN_PROGRESS": "进行中",
         "STOP_EXECUTIONS": "停止任务",
         "ID":"ID",
