--- a/src/portal/src/i18n/lang/fr-fr-lang.json
+++ b/src/portal/src/i18n/lang/fr-fr-lang.json
@@ -656,12 +656,12 @@
             "VERIFY_CERT": "authentification vérifier cert"
         },
         "OIDC": {
-            "OIDC_PROVIDER": "OIDC fournisseur",
-            "ENDPOINT": "OIDC paramètre",
+            "OIDC_PROVIDER": "OIDC Fournisseur",
+            "ENDPOINT": "OIDC Faramètre",
             "CLIENT_ID": "no d'identification du client OIDC",
             "CLIENTSECRET": "OIDC Client Secret",
             "SCOPE": "OIDC Scope",
-            "OIDCSKIPCERTVERIFY": "OIDC vérifier cert",
+            "OIDCSKIPCERTVERIFY": "Certificat OIDC skip vérifier",
             "OIDC_SETNAME": "Ensemble OIDC nom d'utilisateur",
             "OIDC_SETNAMECONTENT": "vous devez créer un Harbor identifiant la première fois lors de la vérification par une tierce partie (oidc). il sera utilisé au sein de port à être associés aux projets, des rôles, etc.",
             "OIDC_USERNAME": "d'utilisateur"
