fix frontend issues
Signed-off-by: Meina Zhou <meinaz@vmware.com>

--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -431,7 +431,7 @@
         "JOB_LOG_VIEWER": "Ver log da tarefa de replicação",
         "NO_ENDPOINT_INFO": "Por favor adicione antes um endpoint",
         "NO_PROJECT_INFO": "Esse projeto não existe",
-        "SOURCE_IMAGES_FILTER": "Filtro de imagens de origem",
+        "SOURCE_RESOURCE_FILTER": "Source resource filter",
         "SCHEDULED": "Agendado",
         "MANUAL": "Manual",
         "EVENT_BASED":"Event Based",
@@ -445,6 +445,7 @@
         "SOURCE_PROJECT": "Projeto de origem",
         "REPLICATE": "Replicar",
         "DELETE_REMOTE_IMAGES":"Remover imagens remotas quando removido localmente",
+        "DELETE_ENABLED": "Enabled this policy",
         "REPLICATE_IMMEDIATE":"Replicar imagens existentes imediatamente",
         "NEW": "Novo",
         "NAME_TOOLTIP": "nome da regra de replicação deve conter ao menos 2 caracteres sendo caracteres minusculos, números e  ._- e devem iniciar com letras e números.",
