--- a/src/portal/src/i18n/lang/zh-cn-lang.json
+++ b/src/portal/src/i18n/lang/zh-cn-lang.json
@@ -432,7 +432,7 @@
         "JOB_LOG_VIEWER": "查看复制任务日志",
         "NO_ENDPOINT_INFO": "请先添加一个目标",
         "NO_PROJECT_INFO": "此项目不存在",
-        "SOURCE_IMAGES_FILTER": "源镜像过滤器",
+        "SOURCE_RESOURCE_FILTER": "源资源过滤器",
         "SCHEDULED": "定时",
         "MANUAL": "手动",
         "EVENT_BASED":"事件驱动",
@@ -446,6 +446,7 @@
         "SOURCE_PROJECT": "源项目",
         "REPLICATE": "复制",
         "DELETE_REMOTE_IMAGES": "删除本地镜像时同时也删除远程的镜像。",
+        "DELETE_ENABLED": "默认启用该规则",
         "REPLICATE_IMMEDIATE": "立即复制现有的镜像。",
         "NEW": "新增",
         "NAME_TOOLTIP": "项目名称由小写字符、数字和._-组成且至少2个字符并以字符或者数字开头。",
