--- a/src/portal/src/i18n/lang/pt-br-lang.json
+++ b/src/portal/src/i18n/lang/pt-br-lang.json
@@ -99,7 +99,11 @@
         "ADMIN_RENAME_BUTTON": "Alterar nome de usuário",
         "ADMIN_RENAME_TIP": "Selecione o botão para alterar o nome de usuário para \"admin@harbor.local\". Essa operação não pode ser desfeita.",
         "RENAME_SUCCESS": "Renomeado com sucesso!",
-        "RENAME_CONFIRM_INFO": "Atenção, alterar o nome para admin@harbor.local não pode ser desfeito."
+        "RENAME_CONFIRM_INFO": "Atenção, alterar o nome para admin@harbor.local não pode ser desfeito.",
+        "CLI_PASSWORD": "Segredo CLI",
+        "CLI_PASSWORD_TIP": "Você Pode USAR este Segredo de clitóris Como senha Ao USAR clitóris de estivador /leme para acessar Harbor.",
+        "COPY_SUCCESS": "SUCESSO de cópia",
+        "COPY_ERROR": "Cópia falhou"
     },
     "CHANGE_PWD": {
         "TITLE": "Alterar Senha",
